--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "formik": "^2.2.9",
     "framer-motion": "^8.1.3",
     "immer": "^9.0.17",
     "react": "^18.2.0",
@@ -13,6 +14,7 @@
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
+    "yup": "^0.32.11",
     "zustand": "^4.3.1"
   },
   "scripts": {
